--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ ethereum-types = "0.8.0"
 futures = "0.3"
 parity-bytes = "0.1"
 parity-crypto = { version = "0.4.2", features = ["publickey"] }
+parking_lot = "0.10"
 rustc-hex = "1.0"
 serde = { version = "1.0", features = ["derive"] }
