--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ parity-crypto = { version = "0.4.2", features = ["publickey"] }
 parking_lot = "0.10"
 rustc-hex = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+tiny-keccak = { version = "2.0", features = ["keccak"] }
 
 [dev-dependencies]
 serde_json = "1.0"
