--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ parking_lot = "0.10"
 rustc-hex = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tiny-keccak = { version = "2.0", features = ["keccak"] }
-tokio = { version = "0.2", features = ["full"] }
+tokio-compat = { version = "0.1", features = ["rt-full"] }
 
 [dev-dependencies]
 serde_json = "1.0"
